--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                             </div>
                             <!-- Time -->
                             <div class="time">
-                                <span class="time-elapsed">00:00 / </span>
-                                <span class="time-duration">02:49</span>
+                                <span class="time-elapsed"></span>
+                                <span class="time-duration"></span>
                             </div>
                             <!-- Fullscreen -->
                             <div class="fullscreen">
